<resources>
    <string name="app_name">API News Stand</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="get_articles">GET_ARTICLES</string>
    <string name="get_top_articles">GET_TOP_ARTICLES</string>
    <string name="get_latest_articles">GET_LATEST_ARTICLES</string>
    <string name="appwidget_text">EXAMPLE</string>

    <string name="all">all</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="gaming">Gaming</string>
    <string name="general">General</string>
    <string name="music">Music</string>
    <string name="politics">Politics</string>
    <string name="science_and_nature">Science-and-Nature</string>
    <string name="sport">Sport</string>
    <string name="technology">Technology</string>
    <string name="science">science</string>

    <string name="source_query">Source=?</string>
    <string name="category_query">Category=?</string>

    <string name="category">Category</string>
    <string name="sortBy">Sort By</string>
    <string name="add_widget">Add widget</string>

    <string name="top">Top</string>
    <string name="latest">Latest</string>

    <string name="image">Image</string>
    <string name="search_articles">Search articles</string>
    <string name="clear_search_history">Clear search history</string>

    <string name="placeholder_string">Lorem ipsum</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="url">URL</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="search_term">search_term</string>
    <string name="browse">browse</string>

    <string name="categoryId">Category_Id</string>

    <string name="spinnerSelection">spinnerSelection</string>
    <string name="source_item">source_item</string>
    <string name="isRefreshed">isRefreshed</string>
    <string name="listViewSelected">listViewSelected</string>
    <string name="listViewRestore">listViewRestore</string>
    <string name="layoutManagerRestore">layoutManagerRestore</string>

    <string name="editTextMode">editTextMode</string>
    <string name="previousSearchTerm">previousSearchTerm</string>

    <string name="api_news_stand">API News Stand</string>
    <string name="powered_by_news_api">Powered by News API</string>

    <string name="connect_to_internet">Please connect to the internet.</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>

    <string name="api_key">16d3d0c3f2654b8ab9dc94c4a741491c</string>

</resources>
